fix: search modal overflow

--- a/packages/ui-components/src/Common/Search/Modal/index.module.css
+++ b/packages/ui-components/src/Common/Search/Modal/index.module.css
@@ -110,6 +110,7 @@
     w-screen
     flex-col
     border-neutral-200
+    md:max-w-[42rem]
     lg:h-auto
     lg:max-h-[70vh]
     lg:w-auto
